Fix pager layout bug;

--- a/frontend/src/app/result/result.component.css
+++ b/frontend/src/app/result/result.component.css
@@ -45,3 +45,7 @@
   float: right;
   margin-right: 20px;
 }
+
+.page-link-ex {
+  padding: 0.23rem !important;
+}
